Markdown: Fix overflow image size in content wrap

--- a/app/assets/stylesheets/less/_mixins.less
+++ b/app/assets/stylesheets/less/_mixins.less
@@ -169,3 +169,11 @@
     -o-user-select:@param;
     user-select: @param;
 }
+
+.box-sizing(@param:border-box) {
+    -webkit-box-sizing:@param;
+    -moz-box-sizing:@param;
+    -ms-sbox-izing:@param;
+    -o-box-sizing:@param;
+    box-sizing: @param;
+}
